update 0.1 : initial files added
update 1.0: added a begginer level for exercises, added 4 new exercises and answers for them and also added a info.txt file.
update 1.1: removed a hidden file